# cuPhysics

./: .gitignore  CMakeLists.txt  README.md
cuphysics/: CMakeLists.txt
cuphysics/include/: cuphysics.h
cuphysics/include/cuphysics/: Particle.h  Vector3.h  precision.h
cuphysics/src/: Vector3.cpp
examples/: vector3_example.cpp
